<resources>
    <string name="app_name">OBD2Tool</string>
    <string name="bt_init">Init Bluetooth</string>
    <string name="veh_init">Select vehicle</string>
    <string name="label_RPM">Revolutions</string>
    <string name="label_Speed">Speed</string>
    <string name="label_coolant">Coolant</string>
    <string name="unit_RPM">RPM</string>
    <string name="unit_speed">km/h</string>
    <string name="unit_temperature">°C</string>
    <string name="zero">0</string>
    <string name="live_data">Live data</string>
    <string name="edit_command">OBD command</string>
    <string name="btn_send">Send</string>
    <string name="btn_terminal">Terminal</string>
    <string name="tab_connection">Connection</string>
    <string name="tab_terminal">Terminal</string>
    <string name="tab_live">Live data</string>
    <string name="tab_diagnosis">Diagnosis</string>
    <string name="label_mil">MIL</string>
    <string name="label_DTC_list">DTC list</string>
    <string name="btn_clearDTC">Clear DTC</string>
    <string name="label_fuel_sys_stat">Fuel system status</string>
    <string name="fuel_sys_01">Open loop due to insufficient engine temperature</string>
    <string name="fuel_sys_02">Closed loop, using oxygen sensor feedback to determine fuel mix</string>
    <string name="fuel_sys_04">Open loop due to engine load OR fuel cut due to deceleration</string>
    <string name="fuel_sys_08">Open loop due to system failure</string>
    <string name="fuel_sys_16">	Closed loop, using at least one oxygen sensor but there is a fault in the feedback system</string>
    <string name="label_O2_sensors">O2 sensors</string>
    <string name="label_O2_tests">O2 test results</string>
    <string name="btn_getSupportedPIDs">Get supported PIDs</string>
    <string name="tab_vehicle_info">Vehicle Info</string>
    <string name="mil">Mil</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="dtc">DTC</string>
    <string name="none">None</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_trip">Trips</string>
    <string name="start">Start</string>
    <string name="from">From</string>
    <string name="range">Range</string>
    <string name="connection">Connection</string>
    <string name="defaultBtDev">Default Bluetooth device</string>
    <string name="defaultVeh">Default Vehicle</string>
    <string name="timings">Timings</string>
    <string name="obdRate">OBD live queuing rate</string>
    <string name="tab_prefs">Preferences</string>
    <string name="sensorRate">Sensor update rate</string>
    <string name="dashboard">Dashboard</string>
    <string name="trips">Trips</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="acceleration">Acceleration</string>
    <string name="terminal">Terminal</string>
    <string name="preferences">Preferences</string>
    <string name="title_activity_main2">OBD2Tool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_desc">OBDII Diagnostic tool and data collector</string>
    <string name="vehicles">Vehicles</string>
    <string name="vehicle_name">Vehicle name:</string>
    <string name="name">Name</string>
    <string name="vehicle_make">Vehicle make:</string>
    <string name="make">Make</string>
    <string name="vehicle_model">Vehicle model:</string>
    <string name="model">Model</string>
    <string name="new_vehicle">New Vehicle</string>
    <string name="create">Create</string>
    <string name="delete_veh">Delete vehicle</string>
    <string name="delete_confirm_message">Do you really want to delete</string>

    <string name="maps_api_key">AIzaSyBvbUu2UXdVaUWTLygRQHAUl8li07WIpHc</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="z">Z:</string>
    <string name="lat">Latitude:</string>
    <string name="lon">Longitude:</string>
    <string name="alt">Altitude:</string>
    <string name="data">data</string>
    <string name="finish">Finish</string>
    <string name="stop">Stop</string>
    <string name="stopwatch_default">00.000</string>
    <string name="vehicle">Vehicle</string>
    <string name="to">To</string>
    <string name="delimiter">-</string>
    <string name="select_data">Select data to monitor!</string>
    <string name="btn_stop">Stop</string>


</resources>
