<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_connection"
            android:title="@string/connection"
            android:icon="@drawable/ic_wrench"/>
        <item
            android:id="@+id/menu_vehicle"
            android:title="@string/vehicles"
            android:icon="@drawable/ic_vehicle"/>
        <item
            android:id="@+id/menu_dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_dashboard"/>
        <item
            android:id="@+id/menu_trips"
            android:title="@string/trips"
            android:icon="@drawable/ic_trip"/>
        <item
            android:id="@+id/menu_diag"
            android:title="@string/diagnostic"
            android:icon="@drawable/ic_mil"/>
        <item
            android:id="@+id/menu_accel"
            android:title="@string/acceleration"
            android:icon="@drawable/ic_acceleration"/>
        <item
            android:id="@+id/menu_terminal"
            android:title="@string/terminal"
            android:icon="@drawable/ic_terminal"/>
        <item
            android:id="@+id/menu_pref"
            android:title="@string/preferences"
            android:icon="@drawable/ic_settings"/>
    </group>
</menu>