<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_connection"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/tab_connection"/>
    <item
        android:id="@+id/action_terminal"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/tab_terminal"/>
    <item
        android:id="@+id/action_live"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/tab_live"/>
    <item
        android:id="@+id/action_diag"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/tab_diagnosis"/>

    <item
        android:id="@+id/action_vehicle"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/tab_vehicle_info"/>

</menu>