<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="obdtool.com.obd2_2.Fragment.LiveFragment">

    <LinearLayout
        android:id="@+id/row_RPM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/label_RPM"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/label_RPM" />
        <TextView
            android:text="@string/zero"
            android:layout_width="50dp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:id="@+id/value_RPM" />
        <TextView
            android:text="@string/unit_RPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unit_RPM" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_RPM">

        <TextView
            android:text="@string/label_Speed"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/label_Speed" />
        <TextView
            android:text="@string/zero"
            android:layout_width="50dp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:id="@+id/value_Speed" />
        <TextView
            android:text="@string/unit_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unit_speed" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_coolant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_speed">

        <TextView
            android:text="@string/label_coolant"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/label_coolant" />
        <TextView
            android:text="@string/zero"
            android:layout_width="50dp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:id="@+id/value_coolant" />
        <TextView
            android:text="@string/unit_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unit_coolant" />

    </LinearLayout>

    <Button
        android:id="@+id/btnStartStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_coolant"
        android:text="@string/start"/>

    <LinearLayout
        android:id="@+id/row_acc_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnStartStop">

        <TextView
            android:id="@+id/label_acc_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"/>
        <TextView
            android:text="@string/zero"
            android:layout_width="50dp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:id="@+id/value_acc_x" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/row_acc_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_acc_x">

        <TextView
            android:id="@+id/label_acc_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"/>
        <TextView
            android:text="@string/zero"
            android:layout_width="50dp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:id="@+id/value_acc_y" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/row_acc_z"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_acc_y">

        <TextView
            android:id="@+id/label_acc_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z"/>
        <TextView
            android:text="@string/zero"
            android:layout_width="50dp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:id="@+id/value_acc_z" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_gps_lat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_acc_z">

        <TextView
            android:id="@+id/label_gps_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat"/>
        <TextView
            android:text="@string/zero"
            android:layout_width="50dp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:id="@+id/value_gps_lat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_gps_lon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_gps_lat">

        <TextView
            android:id="@+id/label_gps_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lon"/>
        <TextView
            android:text="@string/zero"
            android:layout_width="50dp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:id="@+id/value_gps_lon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_gps_alt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_gps_lon">

        <TextView
            android:id="@+id/label_gps_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alt"/>
        <TextView
            android:text="@string/zero"
            android:layout_width="50dp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:id="@+id/value_gps_alt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_gps_spd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_gps_alt">

        <TextView
            android:id="@+id/label_gps_spd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Speed"/>
        <TextView
            android:text="@string/zero"
            android:layout_width="50dp"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:id="@+id/value_gps_spd" />

    </LinearLayout>

</RelativeLayout>
