<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="obdtool.com.obd2_2.Fragment.AccelerationFragment">

    <RelativeLayout
        android:id="@+id/layout_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layout_selector"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start"/>

            <NumberPicker
                android:id="@+id/numberPickerStart"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_toEndOf="@id/layout_selector"
            android:layout_toStartOf="@+id/layout_selector2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_centerHorizontal="true"
                android:id="@+id/btnStartAcceleration"
                android:layout_margin="10dp"
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="@string/stopwatch_default"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:layout_below="@id/btnStartAcceleration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:id="@+id/txtTimer" />

            <TextView
                android:layout_alignEnd="@id/txtTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTimer"
                android:text="@string/zero"
                android:textSize="50sp"
                android:id="@+id/txtSpeed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txtSpeed"
                android:layout_alignBottom="@id/txtSpeed"
                android:text="@string/unit_speed"
                android:id="@+id/textView2" />

        </RelativeLayout>

        <LinearLayout
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:id="@id/layout_selector2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/finish"/>

            <NumberPicker
                android:id="@+id/numberPickerFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="10dp"
        android:id="@+id/layout_acc_list_selector"
        android:layout_below="@id/layout_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:id="@+id/spinner_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:id="@+id/spinner_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/acc_list"
        android:layout_width="match_parent"
        android:layout_below="@id/layout_acc_list_selector"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context="obdtool.com.obd2_2.Fragment.TripFragment"
        tools:listitem="@layout/list_item_acc" />







</RelativeLayout>
